--- a/templates/admin/Invoice/_cardCancellation.html.twig
+++ b/templates/admin/Invoice/_cardCancellation.html.twig
@@ -17,7 +17,8 @@
                     {{ form_label(cancelForm.substitutedByInvoice, null, {label_attr: {class: 'control-label'}}) }}
                     {% if invoice.substitutedByInvoice %}
                         {% set substituteInvoice = invoice.substitutedByInvoice %}
-                        <div class="form-control" style="background-color: #CCC;">{{ substituteInvoice }} | {{ substituteInvoice.invoicePeriod }}</div>
+                        <div class="form-control" style="background-color: #CCC;">{{ substituteInvoice }}
+                            | {{ substituteInvoice.invoicePeriod }}</div>
                     {% endif %}
                     {{ form_widget(cancelForm.substitutedByInvoice, {attr: {class: 'form-control'}}) }}
                 </div>
