--- a/templates/admin/Statement/_cardAssociations.html.twig
+++ b/templates/admin/Statement/_cardAssociations.html.twig
@@ -13,7 +13,7 @@
         </div>
 
         <div class="field-group">
-            <div class="caption"><i class="fa fa-calendar"></i> Financial File</div>
+            <div class="caption"><i class="fa fa-calendar"></i> Financial Month</div>
             <div class="value">
                 {% set financialMonth = statement.financialMonth %}
                 <a href="{{ ea_url()
