--- a/templates/admin/Invoice/_cardCancellation.html.twig
+++ b/templates/admin/Invoice/_cardCancellation.html.twig
@@ -1,24 +1,15 @@
 {% embed 'admin/_common/collapsible_card.twig' with { icon:'fa fa-cancel', title: 'Cancelation' } %}
     {% block card_body %}
 
-        {% if invoice.status|lower == 'vigente' %}
-            {% if false and invoice.substitutedByInvoice is not null %}
-                <span class="text-danger">Already substituted by invoice</span> <a href="{{ ea_url()
-                .setController('App\\Controller\\Admin\\InvoiceCrudController')
-                .setAction('detail')
-                .setEntityId(invoice.substitutedByInvoice.id) }}">{{ invoice.substitutedByInvoice }}</a>
-                <div class="mt-2">Please cancel without reference on <a target="enlace-fiscal"
-                                                                        href="https://portal.enlacefiscal.com/comprobantes/factura">EnlaceFiscal</a>
-                </div>
-            {% elseif cancelForm is not null %}
+        {% if invoice.status|lower == 'vigente' and invoice.cancellationData is empty %}
+            {% if cancelForm is not null %}
                 {{ form_start(cancelForm, {attr:{id:'cancelForm'}}) }}
 
                 <div class="form-group">
                     {{ form_label(cancelForm.substitutedByInvoice, null, {label_attr: {class: 'control-label'}}) }}
                     {% if invoice.substitutedByInvoice %}
                         {% set substituteInvoice = invoice.substitutedByInvoice %}
-                        <div class="form-control" style="background-color: #CCC;">{{ substituteInvoice }}
-                            | {{ substituteInvoice.invoicePeriod }}</div>
+                        <div class="form-control" style="background-color: #CCC;">{{ substituteInvoice }} | {{ substituteInvoice.invoicePeriod }}</div>
                     {% endif %}
                     {{ form_widget(cancelForm.substitutedByInvoice, {attr: {class: 'form-control'}}) }}
                 </div>
