--- a/templates/admin/Statement/_cardDocuments.html.twig
+++ b/templates/admin/Statement/_cardDocuments.html.twig
@@ -66,7 +66,7 @@
                                                 class="text-muted {{ file_icon(document.filename) }}"></i> </a>
                                     <a target="download"
                                        href="{{ path('admin_document_download', {document:document.id}) }}"><i
-                                                class="fa fa-trash text-danger"></i></a>
+                                                class="tx-delete-btn fa fa-trash text-danger"></i></a>
                                 </div>
                             </td>
                         </tr>
