Add statement navigation

--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -20,6 +20,7 @@
 {% endblock %}
 
 {% block main %}
+    <div>{{ statement_navigation(statement, 6) }}</div>
     <div class="row">
         <!-- Left column of cards -->
         <div class="col-md-6">
