Add support for customer color, emails, and address management as well as additional account properties

--- a/templates/admin/Customer/details.html.twig
+++ b/templates/admin/Customer/details.html.twig
@@ -2,10 +2,10 @@
 
 {% block main %}
 
-    <div class="card">
-        <div class="card-header">Details</div>
-        {{ parent() }}
-    </div>
+    {{ parent() }}
+{#    <div class="card">#}
+{#        <div class="card-header">Details</div>#}
+{#    </div>#}
 
     <div style="clear:both;"></div>
 
