--- a/templates/admin/Invoice/_cardData.html.twig
+++ b/templates/admin/Invoice/_cardData.html.twig
@@ -1,6 +1,7 @@
 {% embed 'admin/_common/collapsible_card.twig' with { icon:'fa fa-code', title: 'Data', width:12 } %}
     {% block card_body %}
-
+        <div class="alert alert-info">Peticion</div>
+        <div data-level="0" class="render-json">{% if invoice.data.peticion|default(null) is not null %}{{ invoice.data.peticion|json_decode|json_encode|raw }}{% endif %}</div>
         <div data-level="0" class="render-json">{{ invoice.data|json_encode|raw }}</div>
 
     {% endblock %}
