--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -32,49 +32,53 @@
         </div>
     </div>
 
-    {% embed 'admin/_common/collapsible_card.twig' with {
-        icon:'fa fa-paperclip',
-        title: 'Attachments',
-        bodyClass: 'px-0',
-        width: 12
-    } %}
+    <div class="row">
+        <div class="col-sm-6">
+            {% embed 'admin/_common/collapsible_card.twig' with {
+                icon:'fa fa-paperclip',
+                title: 'Transactions',
+                bodyClass: 'px-0',
+            } %}
 
-        {% block card_header %}
-            <div class="card-header">
-                <div style="float:right">
+                {% block card_header %}
+                    <div class="card-header">
+                        <div style="float:right">
                     <span style="font-family: monospace"
                           id="financial-month-path">{{ entity.instance.financialMonth|financial_month_path }}</span>&nbsp;<a
-                            class="copy-to-clipboard" data-target="#financial-month-path">
-                        <i class="fa fa-clipboard"></i>
-                    </a>
-                </div>
-                Transactions
-            </div>
-        {% endblock %}
+                                    class="copy-to-clipboard" data-target="#financial-month-path">
+                                <i class="fa fa-clipboard"></i>
+                            </a>
+                        </div>
+                        Transactions
+                    </div>
+                {% endblock %}
 
-        {% block card_body %}
-            <div id="custom-transaction-section">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <td>#</td>
-                        <td>Date</td>
-                        <td>Description</td>
-                        <td>Amount</td>
-                        <td>Status</td>
-                    </tr>
-                    </thead>
-                    {% for transaction in transactions %}
-                        {{ include('admin/Statement/detail_transaction.html.twig', {transaction:transaction}) }}
-                    {% endfor %}
-                </table>
-            </div>
-        {% endblock %}
-    {% endembed %}
-
-    {{ include('admin/Statement/_cardInvoices.html.twig') }}
-    {{ include('admin/Statement/_cardAttachments.html.twig') }}
-    {{ include('admin/Statement/_cardDocuments.html.twig') }}
+                {% block card_body %}
+                    <div id="custom-transaction-section">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <td>#</td>
+                                <td>Date</td>
+                                <td>Description</td>
+                                <td>Amount</td>
+                                <td>Status</td>
+                            </tr>
+                            </thead>
+                            {% for transaction in transactions %}
+                                {{ include('admin/Statement/detail_transaction.html.twig', {transaction:transaction}) }}
+                            {% endfor %}
+                        </table>
+                    </div>
+                {% endblock %}
+            {% endembed %}
+        </div>
+        <div class="col-sm-6">
+            {{ include('admin/Statement/_cardInvoices.html.twig') }}
+            {{ include('admin/Statement/_cardAttachments.html.twig') }}
+            {{ include('admin/Statement/_cardDocuments.html.twig') }}
+        </div>
+    </div>
 
     {{ include('admin/Statement/_cardEDocs.html.twig') }}
 
