Support detection of invoices that have been skipped for payment

--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -129,6 +129,11 @@
             display: none;
         }
 
+        .detail-row.unpaid {
+            border-left: 3px solid #f00;
+            background-color: #fdd;
+        }
+
         .btn-group-xs > .btn, .btn-xs {
             padding: .25rem .4rem;
             font-size: .875rem;
