--- a/templates/admin/Statement/_cardInvoices.html.twig
+++ b/templates/admin/Statement/_cardInvoices.html.twig
@@ -12,7 +12,10 @@
                     </tr>
                     {% for invoice in invoices %}
                         <tr data-droppable-id="{{ invoice.id }}" data-droppable-type="invoice"
-                            class="detail-row invoice draggable" title="{{ loop.index }}">
+                            class="detail-row invoice draggable{% if invoice.unpaid %} unpaid{% endif %}"
+                            title="{{ loop.index }}"
+
+                            >
                             <td class="drag-handle" title="Drag to move"><i class="fa fa-arrows-alt"></i></td>
                             <td class="nowrap">
                                 {% if invoice.year is not null %}
@@ -22,7 +25,7 @@
                                 {% endif %}
                             </td>
                             <td class="nowrap">{{ invoice.series }}-{{ invoice.number }}</td>
-                            <td>{{ invoice.recipientRfc }}</td>
+                            <td class="nowrap">{% if invoice.payment %}{{ invoice.payment.series }}-{{ invoice.payment.number }}{% endif %}</td>
                             <td>{{ invoice.recipientName }}</td>
                             <td>{{ invoice.description }}</td>
                             <td class="text-right">{{ invoice.amount|cent_amount }}</td>
