Add hove-highlighting of transaction documents

--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -117,6 +117,10 @@
     {{ parent() }}
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <style>
+        table.inline-hover tr:hover {
+            /* very light yellow background */
+            background-color: #ffffe0;
+        }
         tr.customer-row {
             cursor: pointer;
         }
