--- a/templates/admin/Invoice/_cardInvoice.html.twig
+++ b/templates/admin/Invoice/_cardInvoice.html.twig
@@ -1,13 +1,43 @@
 {% embed 'admin/_common/collapsible_card.twig' with { icon:'fa fa-file-invoice', title: 'Invoice Details' } %}
     {% block card_body %}
 
+        {% if invoice.invoicesList is defined %}
+            {% if invoice.invoicesList is not empty %}
+                <div class="field-group">
+                    <div class="caption">Invoices</div>
+                    <div class="value">
+                        {% for series, numbers in invoice.invoicesList %}
+                            <div>{{ series }}:
+                                {% for invoiceId, number in numbers %}
+                                    {% if loop.index > 1 %}&middot; {% endif %}
+                                    <a href="{{ ea_url()
+                                        .setController('App\\Controller\\Admin\\InvoiceCrudController')
+                                        .setAction('detail')
+                                        .setEntityId(invoiceId) }}">{{ number }}</a>
+                                {% endfor %}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
+        {% else %}
+            <div class="field-group">
+                <div class="caption">Receipt</div>
+                <div class="value">
+                    {% if invoice.payment is null %}
+                        -
+                    {% else %}
+                        <a href="{{ ea_url()
+                            .setController('App\\Controller\\Admin\\InvoiceCrudController')
+                            .setAction('detail')
+                            .setEntityId(invoice.payment.id) }}">{{ invoice.payment }}</a>
+                    {% endif %}
+                </div>
+            </div>
+        {% endif %}
         <div class="field-group">
             <div class="caption">Amount</div>
             <div class="value">{{ invoice.amount|cent_amount }} {{ invoice.currency }}</div>
-        </div>
-        <div class="field-group">
-            <div class="caption">UUID</div>
-            <div class="value"><code class="text-muted">{{ invoice.uuid }}</code></div>
         </div>
         <div class="field-group">
             <div class="caption">Month invoiced</div>
@@ -25,10 +55,9 @@
             <div class="caption">Substituted by Invoice</div>
             <div class="value">
                 {% if invoice.substitutedByInvoice is not null %}
-                    <a href="{{ ea_url()
-                        .setController('App\\Controller\\Admin\\InvoiceCrudController')
-                        .setAction('detail')
-                        .setEntityId(invoice.substitutedByInvoice.id) }}">{{ invoice.substitutedByInvoice }}</a>
+                    <div class="value">
+                        <span style="white-space: nowrap">{{ invoice.substitutedByInvoice.series }}-{{ invoice.substitutedByInvoice.number }} {{ invoice.substitutedByInvoice|invoice_substitution_link }}</span>
+                    </div>
                 {% else %}
                     -none-
                 {% endif %}
@@ -38,14 +67,17 @@
             <div class="caption">Substitutes Invoice</div>
             <div class="value">
                 {% if invoice.substitutesInvoice is not null %}
-                    <a href="{{ ea_url()
-                        .setController('App\\Controller\\Admin\\InvoiceCrudController')
-                        .setAction('detail')
-                        .setEntityId(invoice.substitutesInvoice.id) }}">{{ invoice.substitutesInvoice }}</a>
+                    <div class="value">
+                        <span style="white-space: nowrap">{{ invoice.substitutesInvoice.series }}-{{ invoice.substitutesInvoice.number }} {{ invoice.substitutesInvoice|invoice_substitution_link }}</span>
+                    </div>
                 {% else %}
                     -none-
                 {% endif %}
             </div>
+        </div>
+        <div class="field-group">
+            <div class="caption">UUID</div>
+            <div class="value"><code class="text-muted">{{ invoice.uuid }}</code></div>
         </div>
 
     {% endblock %}
