Add EDocs support for invoices

--- a/templates/admin/Invoice/details.html.twig
+++ b/templates/admin/Invoice/details.html.twig
@@ -31,6 +31,7 @@
         <div class="col-md-6">
             {{ include('admin/Invoice/_cardAssociation.html.twig') }}
             {{ include('admin/Invoice/_cardInvoice.html.twig') }}
+            {{ include('admin/Invoice/_cardEDocs.html.twig') }}
         </div>
         <!-- Right column of cards -->
         <div class="col-md-6">
