Add invoice navigation

--- a/templates/admin/Invoice/details.html.twig
+++ b/templates/admin/Invoice/details.html.twig
@@ -24,6 +24,8 @@
 {% endblock %}
 
 {% block main %}
+    <div>{{ invoice_navigation(invoice, 4) }}</div>
+
     {% set invoice = entity.instance %}
 
     <div class="row">
