--- a/templates/admin/Statement/details.html.twig
+++ b/templates/admin/Statement/details.html.twig
@@ -74,6 +74,7 @@
             {% endembed %}
         </div>
         <div class="col-sm-6">
+            {{ include('admin/Statement/_cardOther.html.twig') }}
             {{ include('admin/Statement/_cardInvoices.html.twig') }}
             {{ include('admin/Statement/_cardAttachments.html.twig') }}
             {{ include('admin/Statement/_cardDocuments.html.twig') }}
