Add support for active/inactive customers

--- a/templates/admin/Invoice/details.html.twig
+++ b/templates/admin/Invoice/details.html.twig
@@ -44,7 +44,7 @@
     </div>
 
     <div class="col-md-12 mt-3">
-        {{ include('admin/Invoice/_cardSpecs.html.twig') }}
+        {{ include('admin/Invoice/_cardData.html.twig') }}
     </div>
 
     {% if cancelForm is not null %}
