Update column label and fix display of Receipt invoices in _cardInvoices.html.twig

--- a/templates/admin/Payment/history.html.twig
+++ b/templates/admin/Payment/history.html.twig
@@ -91,7 +91,7 @@
                             <th>Customer</th>
                             <th>Receipt</th>
                             <th>Paid invoices</th>
-                            <th class="text-right">Amount</th>
+                            <th class="text-right">TX-Amount</th>
                             <th class="text-center">Status</th>
                         </tr>
                         {% for transaction in transactions %}
