--- a/templates/bundles/EasyAdminBundle/layout.html.twig
+++ b/templates/bundles/EasyAdminBundle/layout.html.twig
@@ -22,15 +22,49 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-    <script src="/js/renderjson.js"></script>
+
     <script>
+      // replace label text with icon title
       $(document).ready(function() {
         $('table.datagrid td.actions span.action-label').each(function() {
-          var labelText = $(this).text(); // Get the text of the span
-          $(this).prev('i').attr('title', labelText); // Set the text as the title of the <i> element
-          $(this).hide(); // Hide the span
-        });
-      });
+          var labelText = $(this).text() // Get the text of the span
+          $(this).prev('i').attr('title', labelText) // Set the text as the title of the <i> element
+          $(this).hide() // Hide the span
+        })
+      })
+    </script>
+
+    <script src="/js/renderjson.js"></script>
+{% endblock %}
+
+{% block body_javascript %}
+    <script>
+        {{ parent() }}
+        $(document).ready(function() {
+          // highlight DOM element if it's referenced in the URL hash
+          if (window.location.hash) {
+            var hashParts = window.location.hash.slice(1).split('_')
+            if (hashParts.length === 2) {
+              var prefix = hashParts[ 0 ]
+              var id = hashParts[ 1 ]
+              var selector = '#' + prefix + '_' + id
+              var element = $(selector)
+
+              console.log(selector, element)
+              if (element.length) {
+                console.log("B ", element)
+                element.addClass('hashed-element-hilite')
+                // Scroll the element into view
+                element[ 0 ].scrollIntoView({behavior: 'smooth', block: 'center'})
+
+                // If the element is focusable, set focus
+                if (element.is(':focusable')) {
+                  element.focus()
+                }
+              }
+            }
+          }
+        })
     </script>
 
 {% endblock %}
