--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -176,59 +176,62 @@ ul.invoice-uids-list li {
 th[data-column="amount"],
 th[data-column="balanceDiff"],
 th[data-column="startingBalance"],
-th[data-column="endingBalance"]
-{
+th[data-column="endingBalance"] {
     text-align: right;
 }
+
 td[data-column="amount"],
 td[data-column="balanceDiff"],
 td[data-column="startingBalance"],
-td[data-column="endingBalance"]
-{
+td[data-column="endingBalance"] {
     text-align: right;
 }
 
 span.sequence {
     padding: 1px 5px;
 }
+
 span.income {
-    color: #0e5e42; ;
-    background-color: #dcfce7; ;
+    color: #0e5e42;;
+    background-color: #dcfce7;;
 }
 
 span.expense {
-    color: #ab3760; ;
-    background-color: #fee5e5; ;
+    color: #ab3760;;
+    background-color: #fee5e5;;
 }
 
-span.tax{
-    color: #9f4c2a; ;
-    background-color: #fefac9; ;
+span.tax {
+    color: #9f4c2a;;
+    background-color: #fefac9;;
 }
 
 span.info {
-    color: #29699d; ;
-    background-color: #dfecfd; ;
+    color: #29699d;;
+    background-color: #dfecfd;;
 }
-
 
 
 span.tx-row-none {
-    border-left: 2px solid #999999; ;
+    border-left: 2px solid #999999;;
 }
 
 tr.tx-row-income {
-    border-left: 2px solid #41b083; ;
+    border-left: 2px solid #41b083;;
 }
 
 tr.tx-row-expense {
-    border-left: 2px solid #d56683; ;
+    border-left: 2px solid #d56683;;
 }
 
 tr.tx-row-tax {
-    border-left: 2px solid #dd8638; ;
+    border-left: 2px solid #dd8638;;
 }
 
 tr.tx-row-none {
-    border-left: 2px solid #999999; ;
+    border-left: 2px solid #999999;;
+}
+
+.hashed-element-hilite {
+    background-color: #FFFAE6 !important;
 }
