--- a/templates/admin/_common/collapsible_card.twig
+++ b/templates/admin/_common/collapsible_card.twig
@@ -1,10 +1,10 @@
-<div class="card collapsible mt-2 col-md-{{ width|default(12) }} px-0">
+<div class="card collapsible mt-2 col-md-{{ width|default(12) }} px-0{% if collapsed|default(false) %} collapsed{% endif %}">
     {% block card_header %}
         <div class="card-header">
             <i class="{{ icon }}"></i> {{ title }}
         </div>
     {% endblock %}
-    <div class="card-body {{ bodyClass|default('') }}">
+    <div class="card-body {{ bodyClass|default('') }}"{% if collapsed|default(false) %} style="display:none"{% endif %}>
         {% block card_body %}{% endblock %}
     </div>
 </div>
