--- a/templates/admin/Statement/_cardOther.html.twig
+++ b/templates/admin/Statement/_cardOther.html.twig
@@ -1,6 +1,7 @@
 {% embed 'admin/_common/collapsible_card.twig' with {
     icon:'fa fa-paperclip',
     title: 'Related Documents',
+    collapsed: otherDocuments|length == 0,
 } %}
     {% block card_body %}
 
@@ -30,13 +31,12 @@
                                        .setEntityId(document.id) }}"
                                    ><i class="fa fa-unlink"></i></a>
                             {% endif %}
-
                         </td>
                     </tr>
                 {% endfor %}
             </table>
         {% else %}
-            -
+            - none -
         {% endif %}
 
     {% endblock %}
